Fix header nav and content overlapping

--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -24,7 +24,7 @@ body.active .wrapper .section{
 	position: fixed;
 	right: 0;
 	top: 0;
-
+    z-index: 99;
 }
 
 .left{
